Fix dependency errors, fix spacing on about me, added extra projects on home

--- a/app/static/styles/global.css
+++ b/app/static/styles/global.css
@@ -174,7 +174,7 @@ NAVBAR
 
 /* Style navbar */
 .topnav {
-	position: absolute;
+	position: fixed;
 	z-index: 100;
 	top: 0;
 	width: 100%;
@@ -192,7 +192,7 @@ NAVBAR
 	text-align: center;
 	padding: 14px 16px;
 	text-decoration: none;
-	font-size: 17px;
+	font-size: clamp(1.2rem, 2.5vw, 1.2rem);
 	transition: 0.15s all ease-out;
 	font-family: 'IBM Plex Sans', sans-serif;
 	font-weight: 400;
